--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -5,7 +5,7 @@
 .box1 {
     width: 100px;
     height: 100px;
-    background-image: url('./images/vue.jpg');
+    background-image: url('../assets/images/vue.jpg');
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -13,7 +13,7 @@
 .box2 {
     width: 200px;
     height: 200px;
-    background-image: url('./images/react.png');
+    background-image: url('../assets/images/react.png');
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -21,7 +21,7 @@
 .box3 {
     width: 300px;
     height: 300px;
-    background-image: url('./images/angular.jpg');
+    background-image: url('../assets/images/angular.jpg');
     background-repeat: no-repeat;
     background-size: 100%;
 }
